// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Board can be serialized 1`] = `
Object {
  "grid": Object {
    "0,0": StartPathCard {
      "connectors": Array [
        1,
        2,
        3,
        4,
      ],
      "id": "test-id-1",
      "isUpsideDown": false,
      "status": "played",
    },
    "7,-2": RockFinishPathCard {
      "connectors": Array [
        1,
        4,
      ],
      "id": "test-id-4",
      "isUpsideDown": false,
      "status": "played",
    },
    "7,0": RockFinishPathCard {
      "connectors": Array [
        1,
        2,
      ],
      "id": "test-id-3",
      "isUpsideDown": false,
      "status": "played",
    },
    "7,2": GoldFinishPathCard {
      "connectors": Array [
        1,
        2,
        3,
        4,
      ],
      "id": "test-id-2",
      "isUpsideDown": false,
      "status": "played",
    },
  },
  "id": "test-id-0",
}
`;

exports[`Board get adjacent cards from the board when the position is beside a finish card returns surrounding cards but not the finish card 1`] = `
Array [
  undefined,
  undefined,
  undefined,
  PassageCard {
    "connectors": Array [
      2,
      4,
    ],
    "id": "test-id-57",
    "isUpsideDown": false,
    "status": "played",
  },
]
`;

exports[`Board get adjacent cards from the board when the position is beside nothing returns all empty spaces 1`] = `
Array [
  undefined,
  undefined,
  undefined,
  undefined,
]
`;

exports[`Board get adjacent cards from the board when the position is beside the start card returns the start card and other surrounding cards 1`] = `
Array [
  undefined,
  PassageCard {
    "connectors": Array [
      2,
      4,
    ],
    "id": "test-id-15",
    "isUpsideDown": false,
    "status": "played",
  },
  undefined,
  StartPathCard {
    "connectors": Array [
      1,
      2,
      3,
      4,
    ],
    "id": "test-id-1",
    "isUpsideDown": false,
    "status": "played",
  },
]
`;

exports[`Board get adjacent cards from the board when the position is surrounded returns surrounding cards 1`] = `
Array [
  PassageCard {
    "connectors": Array [
      1,
      2,
      3,
      4,
    ],
    "id": "test-id-35",
    "isUpsideDown": false,
    "status": "played",
  },
  PassageCard {
    "connectors": Array [
      1,
      2,
      3,
      4,
    ],
    "id": "test-id-67",
    "isUpsideDown": false,
    "status": "played",
  },
  PassageCard {
    "connectors": Array [
      1,
      2,
      3,
      4,
    ],
    "id": "test-id-49",
    "isUpsideDown": false,
    "status": "played",
  },
  StartPathCard {
    "connectors": Array [
      1,
      2,
      3,
      4,
    ],
    "id": "test-id-1",
    "isUpsideDown": false,
    "status": "played",
  },
]
`;

exports[`Board get available positions from the board initial board setup returns the four surrounding positions of the start position 1`] = `
Array [
  Position {
    "id": "test-id-5",
    "x": 0,
    "y": 1,
  },
  Position {
    "id": "test-id-6",
    "x": 1,
    "y": 0,
  },
  Position {
    "id": "test-id-7",
    "x": 0,
    "y": -1,
  },
  Position {
    "id": "test-id-8",
    "x": -1,
    "y": 0,
  },
]
`;

exports[`Board get available positions from the board when there is a circular passage returns correct positions 1`] = `
Array [
  Position {
    "id": "test-id-130",
    "x": 0,
    "y": 1,
  },
  Position {
    "id": "test-id-145",
    "x": 0,
    "y": -2,
  },
  Position {
    "id": "test-id-150",
    "x": -2,
    "y": 0,
  },
]
`;

exports[`Board get available positions from the board when there is a passage formed returns correct positions for continuing the passage  1`] = `
Array [
  Position {
    "id": "test-id-64",
    "x": 0,
    "y": 1,
  },
  Position {
    "id": "test-id-68",
    "x": 2,
    "y": 2,
  },
  Position {
    "id": "test-id-69",
    "x": 3,
    "y": 1,
  },
  Position {
    "id": "test-id-72",
    "x": 2,
    "y": 0,
  },
  Position {
    "id": "test-id-73",
    "x": 1,
    "y": -1,
  },
  Position {
    "id": "test-id-78",
    "x": 0,
    "y": -2,
  },
  Position {
    "id": "test-id-79",
    "x": -1,
    "y": 0,
  },
]
`;

exports[`Board get available positions from the board when there is a passage formed returns correct positions for continuing the passage  2`] = `
Array [
  Position {
    "id": "test-id-165",
    "x": 0,
    "y": 1,
  },
  Position {
    "id": "test-id-166",
    "x": 1,
    "y": 0,
  },
  Position {
    "id": "test-id-176",
    "x": 4,
    "y": -1,
  },
  Position {
    "id": "test-id-178",
    "x": 5,
    "y": -1,
  },
  Position {
    "id": "test-id-181",
    "x": 7,
    "y": -1,
  },
  Position {
    "id": "test-id-185",
    "x": 4,
    "y": -3,
  },
  Position {
    "id": "test-id-189",
    "x": 1,
    "y": -2,
  },
  Position {
    "id": "test-id-191",
    "x": 0,
    "y": -2,
  },
  Position {
    "id": "test-id-192",
    "x": -1,
    "y": 0,
  },
]
`;

exports[`Board get available positions from the board when there is a passage formed with upside down cards returns correct positions for continuing the passage  1`] = `
Array [
  Position {
    "id": "test-id-64",
    "x": 0,
    "y": 1,
  },
  Position {
    "id": "test-id-66",
    "x": 1,
    "y": 1,
  },
  Position {
    "id": "test-id-69",
    "x": 3,
    "y": 1,
  },
  Position {
    "id": "test-id-73",
    "x": 1,
    "y": -1,
  },
  Position {
    "id": "test-id-77",
    "x": 0,
    "y": -2,
  },
  Position {
    "id": "test-id-78",
    "x": -1,
    "y": -1,
  },
  Position {
    "id": "test-id-79",
    "x": -1,
    "y": 0,
  },
]
`;

exports[`Board get available positions from the board when there is a passage with dead-ends returns correct positions and does not put positions around dead ends 1`] = `
Array [
  Position {
    "id": "test-id-115",
    "x": 0,
    "y": 1,
  },
  Position {
    "id": "test-id-118",
    "x": 2,
    "y": 1,
  },
  Position {
    "id": "test-id-126",
    "x": 0,
    "y": -2,
  },
]
`;

exports[`Board visualize returns displayable version of the board 1`] = `
"                              ██████                                                
                              ██████                                                
                              ██  ██                                                
                              ██  ██                                                
                              ██  ██                                                
                              ██  ██                                                
                              ██  ██                                    |‾‾‾‾|      
                              ██  ██                                    |    |      
                              ██  ██                                    |____|      
                              ██  ██                        ██████████████  ██|‾‾‾‾|
                              ██  ██                        ██            !!  |    |
                              ██  ██                        ██  ██████████  ██|____|
                              ██  ██                        ██  ██      |‾‾‾‾|      
                              ██  ██                        ██  ██      |    |      
                              ██  ██                        ██  ██      |____|      
████████████████████████████████  ████████████████████████████  ██      ██  ██      
████                            []                              ██      ██xx        
████████████████████████████████  ████████████████████████████████      ██████      
                              ██  ██                                                
                              ██  ██                                                
                              ██  ██                                                
                              ██  ██                                    ██  ██      
                              ██  ██                                      xx██      
                              ██  ██                                    ██████      
                              ██  ██                                                
                              ██  ██                                                
                              ██  ██                                                
                              ██  ██                                                
                              ██  ██                                                
                              ██  ██                                                
                              ██  ██                                                
                              ██████                                                
                              ██████                                                "
`;
